Fix margin issue that caused the whole page to be too wide

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -2,8 +2,8 @@
   display: inline-block;
 }
 
-.navbar-top-links li:last-child {
-  margin-right: 15px;
+.navbar-top-links .navbar-right {
+    margin-right: 0;
 }
 
 .navbar-top-links li a {
